Fix minor overflow issue on mobile landscape orientation

--- a/public/css/midair.css
+++ b/public/css/midair.css
@@ -700,6 +700,12 @@ nav.primary {
   }
 }
 
+@media (max-height: 400px) {
+  .hero h1 {
+    margin: 0 calc(var(--grid-gap) * 2);
+  }
+}
+
 /* ==========================================================================
    11. Table of Contents
    ========================================================================== */
